welcome.lessons.welcome.bat.bool2.TeaParty.scala.error
teaParty:4: error: illegal start of simple expression
else {return 1}
^